# kaggle-phone-pricing

./: .gitignore  1.py  2.py  4.py  README.md  pyproject.toml
kaggel_phonepricing/: features.py  method_filter.py  method_wrapper_backward_1.py  method_wrapper_backward_1_1.py  method_wrapper_backward_2.py  method_wrapper_forward.py  plane.py
tests/: 2.py  3.py
