[tool.poetry]
name = "kaggel-phonepricing"
version = "0.1.0"
description = ""
authors = ["TsukasaHori <best.tsukasa@gmail.com>"]
readme = "README.md"
packages = [{include = "kaggel_phonepricing"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
